<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calc">

    <Button
        android:id="@+id/btnCos"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtCos"
        android:textSize="12sp"
        app:backgroundTint="@color/avanzado"
        app:layout_constraintStart_toEndOf="@+id/btnSin"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtSin"
        android:textSize="12sp"
        app:backgroundTint="@color/avanzado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt2"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toBottomOf="@+id/btnCos" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtdiv"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/operaciones"
        app:iconTint="@color/operaciones"
        app:layout_constraintStart_toEndOf="@+id/btnPot"
        app:layout_constraintTop_toBottomOf="@+id/btnMult" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt6"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt9"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/button36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="60dp"
        android:onClick="regresar"
        android:text="@string/btnRegresar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIgual" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt3"
        app:layout_constraintStart_toEndOf="@+id/btnDos"
        app:layout_constraintTop_toBottomOf="@+id/btnLog" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/borrar"
        app:backgroundTint="@color/borar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCero" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt5"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtmult"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/operaciones"
        app:iconTint="@color/operaciones"
        app:layout_constraintStart_toEndOf="@+id/btnNueve"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtigaul"
        android:textColor="#000000"
        app:backgroundTint="@color/igual"
        app:layout_constraintStart_toEndOf="@+id/btnRaiz"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtPunto"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt8"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtmenos"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/operaciones"
        app:iconTint="@color/operaciones"
        app:layout_constraintStart_toEndOf="@+id/btnSeis"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnPot"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtPot"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/operaciones"
        app:iconTint="#000000"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtmas"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/operaciones"
        app:iconTint="@color/operaciones"
        app:layout_constraintStart_toEndOf="@+id/btnTres"
        app:layout_constraintTop_toBottomOf="@+id/btnTan" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSin" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/txtCalculadora2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtLog"
        android:textSize="12sp"
        app:backgroundTint="@color/avanzado"
        app:layout_constraintStart_toEndOf="@+id/btnCos"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtTan"
        android:textSize="12sp"
        app:backgroundTint="@color/avanzado"
        app:layout_constraintStart_toEndOf="@+id/btnLog"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btnRaiz"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtRaiz"
        app:backgroundTint="@color/avanzado"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toBottomOf="@+id/btnPunto" />

</androidx.constraintlayout.widget.ConstraintLayout>